fixed alignment issues

--- a/css/about.css
+++ b/css/about.css
@@ -21,11 +21,6 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-}
-
-html {
-  scroll-behavior: smooth;
 }
 
 body {
@@ -37,7 +32,7 @@ body {
 }
 
 .container {
-  max-width: 1400px;
+  max-width: 1920px;
   margin: 0 auto;
   padding: 0 32px;
   position: relative;
@@ -52,10 +47,10 @@ a {
   display: flex;
   align-items: center;
   gap: 70px;
-  padding: 45px 5px;
-
+  padding: 45px 10px;
   justify-content: flex-start;
 }
+
 .main-header .logo a {
   font-size: 2rem;
   font-weight: 300;
@@ -79,46 +74,50 @@ a {
 .main-header nav a:hover {
   color: var(--text-white);
 }
+
 .about-section {
   display: flex;
   align-items: center;
-  min-height: 80vh;
+  /* min-height: 80vh; */
   position: relative;
   padding: 4rem 0;
+  margin-left: 30px;
 }
-
+/*  */
 .about-content {
   flex-basis: 50%;
-  max-width: 600px;
+  width: 1500px;
   z-index: 2;
 }
 .about-content .heading {
   margin-bottom: 25px;
 }
 .about-content .heading span {
-  font-size: 2.5rem;
+  font-size: 3rem;
   font-style: italic;
   color: var(--text-white);
   display: block;
 }
 .about-content .heading h1 {
   font-family: "Jim Nightshade", cursive;
-  font-size: 7rem;
+  font-size: 8rem;
   line-height: 0.8;
   color: #d2ad75;
   font-weight: 400;
-  margin-top: -10px;
+  margin-top: -23px;
+  z-index: 10;
+  margin-left: -7px;
 }
 .about-content p {
   font-family: "Antic Didone", serif;
   color: #dedede;
-  font-size: 1.33em;
+  font-size: 31px;
   line-height: 1.8;
   margin-bottom: 35px;
 }
 .about-content p strong {
   font-weight: 700;
-  font-size: 1.5rem;
+  font-size: 44px;
   color: var(--text-gold);
   text-decoration: underline;
   text-decoration-thickness: 1px;
@@ -130,7 +129,7 @@ a {
   padding: 12px 35px;
   color: var(--text-gold);
   font-family: "Jacques Francois", serif;
-  font-size: 1.1rem;
+  font-size: 24.77px;
   border-radius: 50px;
   background: rgba(0, 0, 0, 0.2);
   transition: background-color 0.3s, color 0.3s;
@@ -142,7 +141,7 @@ a {
 
 .about-image {
   position: absolute;
-  right: 10%;
+  right: 12%;
   top: 18%;
   transform: scale(1.4);
 
@@ -151,7 +150,7 @@ a {
 
 .about-image img {
   width: 100%;
-  max-width: 700px;
+  max-width: 935px;
   height: auto;
   position: relative;
   z-index: 2;
@@ -198,51 +197,52 @@ a {
   align-items: center;
   gap: 25px;
 
-  margin-top: 2rem;
-  padding-top: 0.5rem;
-  border-top: 2px solid #d2ad75;
+  margin-top: 84px;
+  /* padding-top: 0.5rem; */
+  border-top: 1px solid #d2ad75;
 }
 
 .quote-icons {
   display: flex;
   gap: 15px;
-  transform: scale(0.7);
+  /* transform: scale(0.9);*/
+  margin-left: 8px;
+  margin-top: 24px;
 }
 
-.quote-icons svg {
-  width: 24px;
-  height: 24px;
-  stroke: var(--text-gold);
-  fill: none;
-  opacity: 0.8;
-  transform: scale(0.7);
+#mail{
+  margin-top: 6px;
 }
+
 
 .quote-text {
   font-family: var(--font-serif);
 }
 
 .quote-text p {
-  font-size: 1rem;
-  margin: 0 0 5px 0;
+  font-size: 19px;
+  margin: 10px 0 9px 0;
   line-height: 1.5;
 
-  color: var(--text-light-gold);
+  color: #ffffff;
 }
 
 .quote-text span {
   display: block;
-  text-align: right;
+  font-size: 22px;
+
+  text-align: center;
   color: var(--text-gold);
-  font-weight: 700;
+  font-weight: 400;
   font-style: normal;
+  text-shadow: -2.61px 2.61px 2.61px #000;
 }
 
 .vertical-text-widget {
   position: absolute;
 
-  bottom: 600px;
-  right: -40px;
+  bottom: 625px;
+  right: 15px;
 
   transform: rotate(-90deg);
 
@@ -250,11 +250,11 @@ a {
 
   display: flex;
   align-items: center;
-  gap: 1.5rem;
+  gap: 0.7rem;
 
   color: #d2ad75;
   font-family: serif;
-  font-size: 1rem;
+  font-size: 23px;
   letter-spacing: 1px;
 }
 
